--- a/style.css
+++ b/style.css
@@ -1,9 +1,7 @@
 #headerCont {
 	justify-content: space-between;
-	font-size: 0.9rem;
 }
 
-#headerCont select {
-	width: 5rem;
-	height: auto;	
+#headerTxt::first-letter, #loginLabel::first-letter, #myAccLabel::first-letter {
+	text-transform: capitalize;
 }
